Finalizada receta de hallacas

--- a/recetas/hallacas.html
+++ b/recetas/hallacas.html
@@ -26,9 +26,11 @@
         y agregándole manteca de cochino, una parte (1 taza) hervida con onoto, 
         la manteca se cuela para descartar el onoto, y otra sin onoto (3 tazas).
         </li>
+        <br>
         <li>Agrega la sal y el papelón molido y se une todo bien, se le agrega poco a poco 
         las 4 tazas de caldo de gallina y se amasa de nuevo 
         </li>
+        <br>
         <li>Se comienza a poner el agua que puede que no se use toda pues pondremos hasta 
         obtener una masa suave, completamente maleable, que no se pegue en las manos y que no se cuartee al estirarla.
         </li>
@@ -44,7 +46,29 @@
         <li>½ kg. de uvas pasas.</li>
     </ul>
 
-    <h4>Hojas</h4>
-    <p>50 pedazos de hojas de plátano de unos 30x30 cm. aproximadamente y pedazos que sobren para dar una segunda cobertura de protección.</p>
+    <h3>Hojas</h3>
+    <ul>
+        <li>50 pedazos de hojas de plátano de unos 30x30 cm. aproximadamente y pedazos que sobren para dar una segunda cobertura de protección.</li>
+        <li>1 rollo de pabilo</li>
+    </ul>
+    <h4>Preparación de las hallacas</h4>
+    <ol>
+        <li>Disponga todos los adornos en un mesón amplio, las hojas se les retira la vena gruesa que trae a la orilla y se lavan muy bien, se secan con un paño y se disponen en el mesón. 
+        <br> Coloque la masa y el guiso de forma que estén al alcance de sus manos
+        </li>
+        <br>
+        <li>Ahora bien, primero va a tomar una hoja de las más grande y la engrasa con un poquito de manteca onotada, coloque, por el lado interior de la hoja, en el centro una bola de masa 
+        <br> que ocupe toda la mano y adelgácela con los dedos (hasta lograr ½ cm), creando una circunferencia simétrica, luego agregue el guiso ya frío y sobre éste coloque los adornos distribuidos armoniosamente.
+        </li>
+        <br>
+        <li>Luego doble por la parte ancha de la hoja una los 2 extremos y observe que se unan los lados de la masa para que el relleno quede cubierto.los 2 bordes de la hoja se unen y se doblan. 
+        <br>Se doblan luego los 2 extremos laterales hacia dentro y envuélvala luego con otra hoja más pequeña, luego, amárrela con pabilo cruzándola dos veces en cada dirección.
+        </li>
+        <br>
+        <li>Cuando tenga varias hallacas listas introdúzcalas en una olla grande con agua hirviendo por espacio con un poco de sal de 40 a 45 minutos, retírelas y escúrralas, deje que se enfríen completamente antes de guardarlas.
+        </li>
+        <br>
+        <li>Para calentarlas introdúzcalas en agua hirviendo por 20 minutos, retire y escúrralas.</li>
+    </ol>
 </body>
 </html>
