--- a/recetas/hallacas.html
+++ b/recetas/hallacas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Receta de hallacas</title>
+    <title>Receta de hallaca</title>
 </head>
 <body>
     <h1>Hallacas</h1>
